[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelle-video"
version = "0.1.0"
description = "A fork of AIDC-AI/Ovis for video understanding and generation tasks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Pixelle-Video Contributors" }
]
keywords = ["video", "multimodal", "vision-language", "generation", "understanding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "diffusers>=0.27.0",
    "einops>=0.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "decord>=0.6.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.21.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
train = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/your-org/Pixelle-Video"
Repository = "https://github.com/your-org/Pixelle-Video"
Issues = "https://github.com/your-org/Pixelle-Video/issues"

[project.scripts]
pixelle-video = "pixelle_video.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# show output from print() calls during tests - helpful when debugging locally
# also added --tb=short so tracebacks are less noisy when hacking around
# removed -v flag since I find the verbose output more annoying than helpful for quick local runs
addopts = "-s --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
